appId: com.konn3ct.mobile
---
- launchApp
- tapOn: "Demo@email.com"
- inputText: "flowboyzamy@gmail.com"
- tapOn: "Enter your password"
- inputText: "Samedo3333@"
- tapOn: "Login"
- tapOn: "More"
- tapOn: "Attendance"
- assertVisible: "Meeting Attendance"
# Conditionally view details only if a past meeting (and the "View Participants" button) is present
- runFlow:
    when:
      visible: "View Participants"
    commands:
      - tapOn: "View Participants"
      - assertVisible: "Attendance Details"
