appId: com.konn3ct.mobile
---
- launchApp
- tapOn: "Demo@email.com"
- inputText: "flowboyzamy@gmail.com"
- tapOn: "Enter your password"
- inputText: "Samedo3333@"
- tapOn: "Login"
- tapOn: "Profile"
- assertVisible: "Profile Information"
